tests/machine/x/rust/str_builtin.error
line 0: compile: exit status 1
error[E0423]: expected function, found builtin type `str`
 --> /workspace/mochi/tests/machine/x/rust/str_builtin.rs:2:22
  |
2 |     println!("{:?}", str(123));
  |                      ^^^ not a function

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.

fn main() {
