tests/machine/x/rust/str_builtin.rs
fn main() {
    println!("{:?}", str(123));
}
